tests/fail/elaboration/fun-app/head-not-fun.fathom
//~ exit-code = 1

let _ : Type = Type true;
let _ : Type = Type true false;
{}
